[project]
name = "mpsync"
version = "0.1.1"
description = "My MpSync for development"
authors = [
    {name = "Cellebyte",email = "marcel.fest@live.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mpfshell @ file:///home/cellebyte/git/mpfshell",
    "watchdog (>=6.0.0,<7.0.0)",
    "telnetlib-313-and-up (>=3.13.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tools.poetry.scripts]
mpsync = 'mpsync:main'